# sVault

./: .gitignore  .mcp.json  CLAUDE.md  README.md  tmp_dash_probe.txt  tmp_sep_probe.txt
backend/: .env.example  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py
backend/app/core/: authz.py  config.py  errors.py  logging.py  middleware.py  razorpay.py  secrets_store.py  security.py  storage.py  supabase_admin.py
backend/app/db/: base.py  session.py
backend/app/schemas/: alert.py  api_key.py  approval.py  billing.py  claim.py  dashboard.py  digest.py  document.py  installment.py  intake.py  m1.py  notification.py  onboarding.py  policy.py  provider_contact.py  reports.py  webhook.py
backend/app/services/: account_export_service.py  alert_engine.py  alert_service.py  api_key_service.py  approval_service.py  calendar_service.py  claim_service.py  dashboard_service.py  (+22 more)
backend/tests/: test_account_export.py  test_api_keys.py  test_approvals.py  test_authz.py  test_calendar.py  test_claims.py  test_cors_on_error.py  test_data_io.py  test_digests.py  test_document_autoprocess.py  test_document_library.py  test_duplicate_document.py  test_entitlements_trial.py  test_health.py  test_installments.py  test_intake.py  test_m1_services.py  test_m2_documents.py  test_m2_policies.py  test_m3_dashboard.py  test_m4_alerts.py  test_m5_billing.py  test_models.py  test_notifications.py  test_notifications_feed.py  test_object_level_access.py  test_onboarding.py  test_provider_contacts.py  test_rag.py  test_users.py  test_webhooks.py
(+204 files in other folders)
